# workshop-nosql

./: README.md  main.py  pyproject.toml
crawler/: ml_browser.py  ml_request.py
