[project]
name = "workshop-nosql"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "flake8>=7.2.0",
    "isort>=6.0.1",
    "loguru>=0.7.3",
    "pandas>=2.2.3",
    "requests>=2.32.3",
    "selenium>=4.31.0",
]
